# fairdm-discussions

./: .gitignore  README.md  pyproject.toml
config/: settings.py  wsgi.py
fairdm_discussions/: __init__.py  apps.py  plugins.py  serializers.py  settings.py  signals.py  urls.py
fairdm_discussions/templates/cotton/sections/: discussion.html
fairdm_discussions/templates/fairdm_discussions/: discussion.html
fairdm_discussions/templatetags/: fairdm_discussions.py
