[tool.poetry]
name = "fairdm-discussions"
version = "0.1.0"
description = "A user-driven discussion plugin for FairDM"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-comments-xtd = "^2.10.8"
django-waffle = "*"

[tool.poetry.group.dev.dependencies]
fairdm-dev-tools = {git = "https://github.com/FAIR-DM/dev-tools"}
shot-scraper = "^1.8"
fairdm = {git = "https://github.com/FAIR-DM/fairdm", rev = "development"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--reuse-db --nomigrations"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["fairdm_discussions"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S105"]  # Allow assert and hardcoded passwords in tests

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

